--- a/amelmore_p1.html
+++ b/amelmore_p1.html
@@ -81,7 +81,16 @@
         </div>
 
         <div class="form-group">
-          <label for="town">My home town is</label>
+          <label for="town"
+            >My home town is
+            <i
+              class="fas fa-circle-question"
+              data-bs-toggle="tooltip"
+              data-bs-placement="top"
+              title="What town did you live in before coming to college?"
+              data-bs-trigger="click"
+            ></i
+          ></label>
           <input
             type="text"
             class="form-control"
@@ -93,6 +102,17 @@
             title="What town did you live in before coming to college?"
           />
         </div>
+
+        <script>
+          var tooltipTriggerList = [].slice.call(
+            document.querySelectorAll('[data-bs-toggle="tooltip"]')
+          );
+          var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+            return new bootstrap.Tooltip(tooltipTriggerEl, {
+              trigger: "click", // Change the tooltip trigger to 'click'
+            });
+          });
+        </script>
 
         <div class="form-group">
           <label for="state">My home state is</label>
