--- a/amelmore_p1.html
+++ b/amelmore_p1.html
@@ -113,7 +113,7 @@
         </script>
 
         <div class="form-group">
-          <label for="state">My home state is</label>
+          <label for="state-select">My home state is</label>
           <select name="state" id="state-select">
             <option value="">-- choose state/territory --</option>
             <option value="AL">AL</option>
