--- a/amelmore_p2.html
+++ b/amelmore_p2.html
@@ -79,7 +79,7 @@
         </div>
 
         <div class="form-group">
-          <label for="bais-classes">BAIS core class I have completed</label>
+          <label>BAIS core class I have completed</label>
           <div class="form-check">
             <input
               class="form-check-input"
